2013-02-07  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/usuarios/import_from_csv.php
	  include/functions_user.php
	  include/help/en/help_import_from_csv: Import users
	from cvs file.

	* extras/import_users_from_csv.php
	  extras/config_file.conf: Added files.Script to import
	 users from csv file.

2013-02-07  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident.php: Fixed an error in ajax
	of incident tabs.

2013-02-07  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident.php: Fixed a hint showing
	information about how to change mas incident show parameter.

2013-02-07  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: Fixed date filter on
	incident search.
	* operation/incidents/incident.php: Deleted bug trace on
	javascript.

2013-02-06  Dario Rodriguez <dario@artica.es>

	* integria_demo.sql: Updated tincident_status field
	changed Resolver to Pending on a third person.

2013-02-06  Vanessa Gil <vanessa.gil@artica.es>

	* include/auth/mysql.php: Check 'enable_login' 
	field to login.

2013-02-06  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  integria_demo.sql
	  extras/migrate.sql
	  godmode/usuarios/configurar_usuarios.php: Added
	'enable_login' field to 'tusuario'.

2013-02-06  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_detail.php
	  operation/projects/people_manager.php
	  operation/todo/todo.php
	  operation/user_report/monthly.php
	  operation/user_report/report_annual.php
	  operation/user_report/report_full.php
	  operation/users/user_spare_workunit.php: Encapsulate
	user's search and changed filter.

	* include/functions_user.php
	  include/ajax/users.php: Added files.

2013-02-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/config_process.php
	 index.php: Added develop_bypass variable necessary for development.

2013-02-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* integria_demo.sql: Added fields 'num_employee' in tusuario, added